--- a/notas/app/views/layouts/application.html.erb
+++ b/notas/app/views/layouts/application.html.erb
@@ -8,8 +8,13 @@
   <%= stylesheet_link_tag 'scaffold', 'application' %>
 </head>
 <body>
-  <div class="pagina">
-    <h1 class="cabecera">Gestor de notas para el curso <%= @year_selected.to_s %></h1>
+    <div class="pagina">
+      <h1 class="cabecera">
+        <a href="http://localhost:3000">
+          <img alt="logo" src="images/logo-universidad-pontificia-salamanca-bis.gif"/>
+        </a>
+      Gestor de notas para el curso <%= @year_selected.to_s %>
+      </h1>
 
     <%= render 'users/user_bar' %>
 
@@ -17,8 +22,11 @@
     <p class="flash error"><%= flash[:error] %></p>
 
     <%= yield %>
-
-    <h3 class="pie">texto pie página</h3>
+      <div class="contacto">
+     <h4>Paloma Vicente Bonafonte 57640 pvicentebo@hotmail.com<br/>
+                    Daniel Martín Martín 58102 danielkidd001@hotmail.com</h4>
   </div>
+  </div>
+
 </body>
 </html>
