--- a/notas/app/views/signatures/show.html.erb
+++ b/notas/app/views/signatures/show.html.erb
@@ -13,73 +13,4 @@
 <br />
 <br />
 <br />
-<% if current_user.is_a? Administrator %>
-  <h2>Profesores que imparten esta asignatura en el curso <%= @year_selected.to_s %>:</h2>
-  <table>
-    <tr>
-      <th>Nombre</th>
-      <th>E-mail</th>
-      <th></th>
-    </tr>
-  <% @signature.teachers.find(:all, :conditions=>['year_id=?',@year_selected]).each do |teacher| %>
-    <tr class="<%= cycle('par','impar') %>">
-      <td><%=h teacher.name %></td>
-      <td><%=h teacher.email %></td>
-      <td><%= link_to 'Eliminar',
-              {:action=>'destroy_teacher', :id=>@signature,
-              :year_id=>@year_selected.id, :teacher_id=>teacher.id},
-              :confirm => '¿Estás seguro?', :method => :delete %></td>
-    </tr>
-  <% end %>
-  </table>
-  <h3 style="color: red"> CORREGIR!! Se tiene que permitir borrar al profesor aunque se haya añadido el alumno</h3>
-  <% @signatures_teacher ||= @signature.signatures_teachers.build %>
-  <% form_for(@signatures_teacher, :url=>{:action=>'create_teacher', :id=>@signature}) do |f| %>
-    <%= f.error_messages %>
-
-    <p>
-      <%= f.label :teacher_id, 'Profesor' %><br />
-      <%= f.collection_select :teacher_id, new_teachers, :id, :name, :prompt => 'Seleccionar profesor' %>
-      <%= f.hidden_field :year_id, :value=>@year_selected.id %>
-      <%= f.submit 'Guardar' %>
-    </p>
-  <%end%>
-
-  <br />
-  <br />
-  <br />
-
-  <h2>Alumnos matriculados en la asignatura en el curso <%= @year_selected.to_s %>:</h2>
-  <table>
-    <tr>
-      <th>Nombre</th>
-      <th>Expediente</th>
-      <th></th>
-    </tr>
-
-   <% @signature.signatures_students.find(:all, :conditions=>['year_id=?',@year_selected]).each do |signatures_student| %>
-      <tr class="<%= cycle('impar', 'par') %>">
-        <td><%=h signatures_student.student.name %></td>
-        <td><%=h signatures_student.student.expedient %></td>
-      <td><%= link_to 'Eliminar',
-              {:action=>'destroy_student', :id=>@signature,
-              :year_id=>@year_selected.id, :student_id=>signatures_student.student.id},
-              :confirm => '¿Estás seguro?', :method => :delete %></td>
-      </tr>
-    <% end %>
-  </table>
-
-  <% @signatures_student ||= @signature.signatures_students.build %>
-  <% form_for(@signatures_student, :url=>{:action=>'create_student', :id=>@signature}) do |f| %>
-    <%= f.error_messages %>
-
-    <p>
-      <%= f.label :student_id, 'Alumno' %><br />
-      <%= f.collection_select :student_id, new_students, :id, :name, :prompt => 'Seleccionar alumno' %>
-      <%= f.hidden_field :year_id, :value=>@year_selected.id %>
-      
-      <%= f.submit 'Guardar' %>
-    </p>
-  <% end %>
-
-<% end %>
+<%= render 'show_admin' if current_user.is_a? Administrator %>
