--- a/notas/app/views/years/_form.html.erb
+++ b/notas/app/views/years/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :start_year %><br />
+    <%= f.label :start_year, 'Año inicial' %><br />
     <%= f.text_field :start_year %>
   </p>
   <p>
