--- a/notas/public/stylesheets/scaffold.css
+++ b/notas/public/stylesheets/scaffold.css
@@ -38,6 +38,10 @@ div.p
     position: absolute;
     right: 0px;
 }
+div.p form
+{
+    display: inline;
+}
 #user-bar-greeting
 {
     font-size: medium;
