--- a/notas/app/views/degrees/show.html.erb
+++ b/notas/app/views/degrees/show.html.erb
@@ -1,8 +1,10 @@
+<h1>Mostrar titulaciones</h1>
+
 <p>
-  <b>Name:</b>
+  <b>Nombre:</b>
   <%=h @degree.name %>
 </p>
 
 
-<%= link_to 'Edit', edit_degree_path(@degree) %> |
-<%= link_to 'Back', degrees_path %>
+<%= link_to 'Modificar', edit_degree_path(@degree) %> |
+<%= link_to 'Volver al listado', degrees_path %>
