--- a/notas/app/views/degrees/edit.html.erb
+++ b/notas/app/views/degrees/edit.html.erb
@@ -1,16 +1,6 @@
-<h1>Editing degree</h1>
+<h1>Editando Titulación</h1>
 
-<% form_for(@degree) do |f| %>
-  <%= f.error_messages %>
+<%= render :partial => 'form' %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @degree %> |
-<%= link_to 'Back', degrees_path %>
+<%= link_to 'Mostrar', @degree %> |
+<%= link_to 'Volver al listado', degrees_path %>
