--- a/notas/app/views/degrees/index.html.erb
+++ b/notas/app/views/degrees/index.html.erb
@@ -1,20 +1,20 @@
-<h1>Listing degrees</h1>
+<h1>Listado de titulaciones</h1>
 
 <table>
   <tr>
-    <th>Name</th>
+    <th>Nombre</th>
   </tr>
 
 <% @degrees.each do |degree| %>
   <tr>
     <td><%=h degree.name %></td>
-    <td><%= link_to 'Show', degree %></td>
-    <td><%= link_to 'Edit', edit_degree_path(degree) %></td>
-    <td><%= link_to 'Destroy', degree, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Mostrar', degree %></td>
+    <td><%= link_to 'Modificar', edit_degree_path(degree) %></td>
+    <td><%= link_to 'Eliminar', degree, :confirm => '¿Estas seguro?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New degree', new_degree_path %>
+<%= link_to 'Nueva titulación', new_degree_path %>
