--- a/notas/app/views/degrees/new.html.erb
+++ b/notas/app/views/degrees/new.html.erb
@@ -1,15 +1,5 @@
-<h1>New degree</h1>
+<h1>Nueva titulación</h1>
 
-<% form_for(@degree) do |f| %>
-  <%= f.error_messages %>
+<%= render :partial => 'form' %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
-
-<%= link_to 'Back', degrees_path %>
+ <%= link_to 'Volver al listado', degrees_path %>
