--- a/notas/app/views/students/show.html.erb
+++ b/notas/app/views/students/show.html.erb
@@ -20,11 +20,13 @@
 </p>
 
 <h2>Asignaturas del Alumno</h2>
-<% @student.signatures.each do |signature| %>
+<% @student.find_signatures(@year_selected).each do |signature| %>
   <p><%= signature.name %></p>
 <% end %>
 
-  <% if current_user.is_a? Administrator %>
-<%= link_to 'Editar', edit_student_path(@student) %> |
+<% if (current_user.is_a? Administrator) %>
+  <%= link_to 'Modificar', edit_student_path(@student) %> |
+<% elsif (current_user == @student)  %>
+  <%= link_to 'Cambiar contraseña', edit_student_path(@student) %>
 <%end%>
-<%= link_to 'Volver al listado', students_path %>
+<%= link_to 'Volver al listado', students_path unless current_user.is_a?(Student) %>
