--- a/notas/app/views/teachers/show.html.erb
+++ b/notas/app/views/teachers/show.html.erb
@@ -16,11 +16,13 @@
 </p>
 
 <h2>Asignaturas del Profesor</h2>
-<% @teacher.signatures.each do |signature| %>
+<% @teacher.find_signatures(@year_selected, @degree_selected).each do |signature| %>
   <p><%= signature.name %></p>
 <% end %>
 
-  <% if current_user.is_a? Administrator %>
-<%= link_to 'Editar', edit_teacher_path(@teacher) %> |
-<%end%>
+<% if current_user.is_a? Administrator %>
+  <%= link_to 'Editar', edit_teacher_path(@teacher) %> |
+<% elsif (current_user == @teacher)  %>
+  <%= link_to 'Cambiar contraseña', edit_teacher_path(@teacher) %> |
+<% end %>
 <%= link_to 'Volver al listado', teachers_path %>
